Kube-State-Metrics Running & Verified Metrics in te-engg-dev-us
- Restricted kube-state-metrics monitoring scope to ops namespace
- Used extracted k8s-level metrics to monitor ArgoCD deployments

--- a/examples/standard/cluster-role-binding.yaml
+++ b/examples/standard/cluster-role-binding.yaml
@@ -1,15 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   labels:
     app.kubernetes.io/name: kube-state-metrics
     app.kubernetes.io/version: v1.8.0
   name: kube-state-metrics
+  namespace: ops
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kube-state-metrics
+  name: view
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
-  namespace: kube-system
+  namespace: ops
