--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,8 +1,7 @@
-namespace: kube-system
+namespace: ops
 
 resources:
 - examples/standard/cluster-role-binding.yaml
-- examples/standard/cluster-role.yaml
 - examples/standard/deployment.yaml
 - examples/standard/service-account.yaml
 - examples/standard/service.yaml
